# opengl-utils

./: .gitignore  CMakeLists.txt  README.md
include/: opengl-utils.hpp  opengl-utils1.hpp
include/ogu/: buffer.h  buffer_texture.h  shader.h  texture.h  vertex_array.h
src/: CMakeLists.txt  buffer.cpp  init.cpp  vertex_array.cpp
src/ogu/: CMakeLists.txt  buffer.cpp  buffer_texture.cpp  shader.cpp  texture.cpp  vertex_array.cpp
